--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,12 @@
 body {
   background: hotpink;
 }
+
+.button {
+  background: deeppink;
+  padding: 2rem 4rem;
+}
+
+.button:hover {
+  background: blueviolet;
+}
