--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,5 @@
-body {
-  background: hotpink;
-}
-
-.button {
-  background: deeppink;
-  padding: 2rem 4rem;
-}
-
-.button:hover {
-  background: blueviolet;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
