--- a/css/base.css
+++ b/css/base.css
@@ -2,11 +2,13 @@
 
 :root {
   --primary: hsl(203, 33%, 60%);
-  --primary-dark: ##33ab4;
-  --secondary: hsl(22, 12%, 49%);
-  --secondary-light: #bfa89e;
-  --white: #ebf5ee;
+  --primary-dark: hsl(16, 83%, 59%);
+  --secondary: hsl(352, 96%, 68%);
+  --secondary-light: hsl(352, 96%, 96%);
+  --clr-base-100: hsl(202, 34%, 96%);
+  --clr-base-200: hsl(202, 34%, 85%);
   --black: #211103;
+  --grey: hsl(201, 7%, 62%);
 
   --ff-sans: sans-serif;
   --ff-serif: serif;
@@ -40,7 +42,7 @@ p {
 }
 
 body {
-  background: var(--white);
+  background: var(--clr-base-100);
   color: var(--black);
   font-size: 1.25rem; /* var(--fs-400) */
   line-height: 1.5;
@@ -57,11 +59,22 @@ ol[class] {
 ul[class] li,
 ol[class] li {
   list-style: none;
-  padding: 0;
 }
 
 img {
   max-width: 100%;
   height: auto;
   display: block;
+}
+
+.title {
+  padding: 3rem;
+  color: var(--white);
+  background-image: linear-gradient(
+    290deg,
+    var(--primary-dark),
+    var(--secondary),
+    var(--secondary),
+    var(--secondary-light)
+  );
 }
