--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -1,7 +1,8 @@
 .card {
   align-items: center;
-  background: var(--primary);
+  background: var(--clr-base-100);
   border-radius: 5px;
+  box-shadow: 5px 5px 5px hsl(0, 18%, 91%);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -10,10 +11,13 @@
 
 .card__title {
   font-family: var(--ff-sans);
+  font-size: 1rem;
+  color: var(--grey);
 }
 
 .card__question {
-  font-size: 1.4rem;
+  font-size: 1.8rem;
+  font-weight: 500;
 }
 
 .card__answer {
@@ -22,7 +26,11 @@
 
 .card__button {
   padding: 0.3rem 0.8rem;
-  border: none;
+  border: 2px solid var(--black);
+  border-radius: 100vw;
+  font-weight: bold;
+  font-size: 1.2rem;
+  margin: 1rem;
 }
 
 .card__button:focus {
@@ -35,8 +43,10 @@
 }
 
 .card__tags li {
-  background: var(--secondary-light);
-  padding: 0.2rem;
+  background: var(--secondary);
+  color: var(--clr-base-100);
+  padding: 0.2rem 0.5rem;
+  border-radius: 100vw;
 }
 
 .card__tags li:not(:last-child) {
