--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -25,8 +25,9 @@
 }
 
 .card__button {
-  padding: 0.3rem 0.8rem;
+  padding: 0.5rem 1.3rem;
   border: 2px solid var(--black);
+  background: hotpink;
   border-radius: 100vw;
   font-weight: bold;
   font-size: 1.2rem;
